# ciencia_de_datos_desde_cero

./: .gitignore  11MachineLearning.ipynb  12_k_vecinos_masCercanos.ipynb  13_Naive_bayes.ipynb  14_regresion_lineal_simple.ipynb  15_regresion_multiple.ipynb  16_regrecion_logica.ipynb  17_arboles_de_decision.ipynb  18_redes_neuronales.ipynb  19_deep_learning.ipynb  20_clustering.ipynb  21_Procesamiento_del_lenguaje_natural.ipynb  ciencia_de_datos_desde_cero.ipynb  pyproject.toml
