[project]
name = "practicaslibros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "tweepy>=4.16.0",
    "twython>=3.9.1",
]
